Update gulp-watch. Fix syntax

--- a/demo.html
+++ b/demo.html
@@ -13,9 +13,9 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
@@ -26,9 +26,9 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
@@ -39,9 +39,9 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
@@ -52,9 +52,9 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>	
@@ -65,9 +65,9 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
@@ -78,22 +78,22 @@
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
 
-	<p>Attributes: data-size='30', data-bg='none', data-color='#9AA9B3'</p>
-	<div class="socicon" data-size="30" data-bg="none" data-color="#9AA9B3">
+	<p>Attributes: data-size='30', data-bg='none', data-color='tomato'</p>
+	<div class="socicon" data-size="30" data-bg="none" data-color="tomato">
 		<a href="" class="vkontakte" title="Vkontakte"></a>
 		<a href="" class="facebook" title="Facebook"></a>
 		<a href="" class="twitter" title="Twitter"></a>
 		<a href="" class="instagram" title="Instagram"></a>
-		<a href="" class="vine" title="Vine"></a>
 		<a href="" class="skype" title="Skype"></a>
 		<a href="" class="google" title="Google"></a>
+		<a href="" class="linkedin" title="LinkedIn"></a>
 		<a href="" class="github" title="GitHub"></a>
 		<a href="" class="pinterest" title="Pinterest"></a>
 	</div>
